--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -1,3 +1,9 @@
+#content-area{
+  overflow: auto;
+  width: 100%;
+  min-height: 100vh;
+}
+
 #filter{
   background: $grey;
   width: 30%;
@@ -70,8 +76,9 @@ select {
       background: transparent;
       font-size: 2rem;
       border: none;
-      border-bottom: 2px solid $lightgrey;
+      border-bottom: 2px solid $darkgrey;
       margin-bottom: 20px;
+      font-weight: 100;
       color: $lightgrey;
     }
   }
@@ -79,20 +86,21 @@ select {
     margin-bottom: 20px;
     .results{
       font-size: 0.8rem;
-      color: $lightgrey;
+      color: $darkgrey;
       display: inline-block;
     }
     .sort-options{
       float: right;
       select{
-        font-size: .9rem;
+        font-size: 0.9rem;
         font-weight: 300;
         border: 1px solid $lightgrey;
         background: transparent;
-        padding: 20px;
         display: inline-block;
-        margin-right: 15px;
         vertical-align: top;
+        margin: 0 15px 0 0;
+        padding: 0;
+        width: 150px;
       }
       .view{
         display: inline-block;
@@ -101,7 +109,162 @@ select {
           font-size: 1.5rem;
         }
       }
-
     }
   }
+
+  .listings-results{
+    margin-bottom: 60px;
+    .listing{
+      background: #fff;
+      border-radius: 5px;
+      -webkit-box-shadow: 0px 9px 54px -4px rgba(148,148,148,1);
+      -moz-box-shadow: 0px 9px 54px -4px rgba(148,148,148,1);
+      box-shadow: 0px 9px 54px -4px rgba(148,148,148,1);
+    }
+    .listing-img{
+      color: white;
+      padding: 15px;
+      position: relative;
+      background: url("http://decorationchannel.com/wp-content/uploads/2011/12/modern-house-with-glass-wall.jpg") no-repeat center center;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      min-height: 200px;
+      -webkit-border-top-left-radius: 5px;
+      -webkit-border-top-right-radius: 5px;
+      -moz-border-radius-topleft: 5px;
+      -moz-border-radius-topright: 5px;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      //Makes house info visible on hover and hides the text "Adress"
+      &:hover{
+        .details{
+          opacity: 1;
+        }
+        .address{
+          opacity: 0;
+        }
+      }
+      .address{
+        position: absolute;
+        bottom: 20px;
+        opacity: 1;
+        //Animation for transition
+        transition: all 0.4s ease-in-out;
+      }
+      .details{
+        transition: all 0.4s ease-in-out;
+        //Makes house info invisible by default
+        opacity: 0;
+        padding: 30px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        -webkit-border-top-left-radius: 5px;
+        -webkit-border-top-right-radius: 5px;
+        -moz-border-radius-topleft: 5px;
+        -moz-border-radius-topright: 5px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#8930f4+0,ca76db+100 */
+        background: rgba(137,48,244,.8); /* Old browsers */
+        background: -moz-linear-gradient(-45deg, rgba(137,48,244,.8) 0%, rgba(202,118,219,.8) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(-45deg, rgba(137,48,244,.8) 0%,rgba(202,118,219,.8) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(135deg, rgba(137,48,244,.8) 0%,rgba(202,118,219,.8) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        .user-img{
+          width: 35px;
+          height: 35px;
+          border-radius: 50%;
+          border: 2px solid white;
+          display: inline-block;
+          background: url("http://decorationchannel.com/wp-content/uploads/2011/12/modern-house-with-glass-wall.jpg") no-repeat center center;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;
+        }
+        .user-details {
+          vertical-align: top;
+          display: inline-block;
+          .user-name{
+            font-weight: 300;
+            font-size: 0.9rem;
+            display: block;
+            color: rgba(255,255,255, 1);
+            margin-top: 3px;
+            margin-bottom: 5px;
+          }
+          .post-date{
+            font-size: 0.9rem;
+            display: block;
+            color: rgba(255,255,255, .7);
+          }
+        }
+        .listing-details{
+          margin-top: 20px;
+          margin-bottom: 10px;
+          .fa {
+            display: inline-block;
+            font-size: 20px;
+            margin-right: 15px;
+          }
+          span{
+            font-weight: 300;
+            font-size: 0.8rem;
+            display: inline-block;
+            vertical-align: top;
+            position: relative;
+            top: 3px;
+          }
+          .floor-space{
+            margin-bottom: 10px;
+          }
+        }
+      }
+    }
+    .bottom-info{
+      padding: 20px 15px;
+      .price{
+        font-size: 1rem;
+        display: block;
+        margin-bottom: 10px;
+        color: $darkgrey;
+      }
+      .location{
+        display: block;
+        font-size: 1.2rem;
+        color: $lightgrey;
+      }
+    }
+  }
+}
+
+.view-btn{
+  background: black;
+  padding: 8px;
+  font-size: 0.9rem;
+  border-radius: 5px;
+  text-align: center;
+  max-width: 150px;
+  transition: background 0.3s ease-in-out;
+  //Changes to pink and to a pointer when hovering
+  &hover{
+    background: $pink;
+    cursor: pointer;
+  }
+}
+//Same functionality as Bootstrap grid system
+.col-md-3{
+  width: 25%;
+  display: inline-block;
+  vertical-align: top;
+  padding: 0px 15px;
+}
+
+.col-md-9{
+  width: 75%;
+  display: inline-block;
 }
