--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -256,6 +256,30 @@ select {
     cursor: pointer;
   }
 }
+
+#pagination{
+  text-align: center;
+  .pages{
+    margin: 0 auto;
+    display: inline-block;
+    background: white;
+    -webkit-box-shadow: 0px 9px 54px -4px rgba(148,148,148,1);
+    -moz-box-shadow: 0px 9px 54px -4px rgba(148,148,148,1);
+    box-shadow: 0px 9px 54px -4px rgba(148,148,148,1);
+    li{
+      padding: 20px 30px;
+      display: inline-block;
+      &:hover,
+      &.active{
+        color: white;
+        font-weight: 700;
+        background: $pink;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
 //Same functionality as Bootstrap grid system
 .col-md-3{
   width: 25%;
