--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -285,13 +285,15 @@ select {
 
 //Same functionality as Bootstrap grid system
 .col-md-3{
-  width: 25%;
   display: inline-block;
   vertical-align: top;
-  padding: 0px 15px;
 }
 
 .col-md-9{
-  width: 75%;
   display: inline-block;
+}
+
+.col-lg-6{
+  display: inline-block;
+  vertical-align: top;
 }
