--- a/assets/sass/_listings.scss
+++ b/assets/sass/_listings.scss
@@ -3,34 +3,45 @@ header{
   color: white;
   //Lets us see the background
   overflow: auto;
-  padding: 20px 15px;
+  padding: 10px 10px;
 
   .logo {
     float: left;
+    font-size: 1.1rem;
+    background: $burgundy;
+    padding: 12px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 500;
+    transition: background 0.3s ease-in-out;
+    &:hover{
+      background: $burgundyHover;
+      text-decoration: none;
+    }
+    i{
+      padding-right: 5px;
+      font-size: 1.3rem;
+    }
   }
 
   nav {
     float: right;
+    padding: 0;
+    padding: 10px 5px;
     a {
       color: white;
       text-decoration: none;
       padding: 7px 20px;
-      text-transform: capitalize;
-      font-weight: 300;
+      font-weight: 500;
       font-size: 0.9rem;
+      text-transform: uppercase;
+      transition: background 0.3s ease-in-out;
       &:hover{
-        color: #FF718E;
-      }
-      &.register-btn {
-        background: $pink;
-        padding: 7px 25px;
-        text-align: center;
-        color: white;
+        background: $burgundyHover;
+        text-decoration: none;
         border-radius: 5px;
+        color: white;
       }
     }
   }
-
-
-
 }
