--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,6 +1,7 @@
 $darkpurple: #0C002B;
 $grey: #FAF7F5;
 $offwhite: #FFFEFF;
-$pink: #FF718E;
+$burgundy: #800020;
+$burgundyHover: #bd002c;
 $darkgrey: #828D9D;
 $lightgrey: #DADDE2;
