--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -6,8 +6,8 @@
 
 #filter{
   background: $grey;
-  width: 30%;
-  max-width: 300px;
+  // width: 30%;
+  // max-width: 200px;
   display: inline-block;
   float: left;
 }
@@ -34,15 +34,14 @@ select {
   margin-bottom: 25px;
   width: 100%;
 }
-
+.title {
+  font-size: 1rem;
+  display: block;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  color: $darkgrey;
+}
 .filters {
-  .title {
-    font-size: 0.9rem;
-    display: block;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    color: $darkgrey;
-  }
   input[type="text"] {
     border-radius: 5px;
     font-size: 1rem;
@@ -57,6 +56,7 @@ select {
       display: block;
       width: 100%;
       padding: 10px 0;
+      font-size: 0.8rem;
       input[type="checkbox"]{
         float: right;
       }
@@ -65,7 +65,7 @@ select {
 }
 
 #listings{
-  width: 70%;
+  width: 100%;
   float: left;
   display: inline-block;
   padding: 15px;
@@ -74,12 +74,13 @@ select {
     input[type="text"] {
       width: 70%;
       background: transparent;
-      font-size: 2rem;
+      font-size: 1.8rem;
       border: none;
       border-bottom: 2px solid $darkgrey;
       margin-bottom: 20px;
       font-weight: 100;
       color: $lightgrey;
+      font-family: 'roboto';
     }
   }
   .sortby-area{
@@ -255,7 +256,7 @@ select {
   transition: background 0.3s ease-in-out;
   //Changes to pink and to a pointer when hovering
   &:hover{
-    background: $burgundy;
+    background: $burgundyHover;
     cursor: pointer;
   }
 }
