--- a/assets/sass/_listings.scss
+++ b/assets/sass/_listings.scss
@@ -6,10 +6,10 @@ header{
   padding: 10px 10px;
 
   .logo {
+    padding: 10px 10px 10px 15px;
     float: left;
     font-size: 1.1rem;
     background: $burgundy;
-    padding: 12px 20px;
     border-radius: 5px;
     color: white;
     font-weight: 500;
@@ -20,22 +20,33 @@ header{
     }
     i{
       padding-right: 5px;
-      font-size: 1.3rem;
+      font-size: 1.6rem;
     }
   }
-
-  nav {
+  p {
+    color: white;
+    font-size: 1.1rem;
+    padding: 13px 0px 0px 15px;
+    float: left;
+    font-family: "verdana";
+    letter-spacing: 1px
+  }
+  .rightNav{
     float: right;
+    padding-top: 13px;
+  }
+  nav {
     padding: 0;
-    padding: 10px 5px;
     a {
       color: white;
       text-decoration: none;
-      padding: 7px 20px;
       font-weight: 500;
       font-size: 0.9rem;
       text-transform: uppercase;
+      border-radius: 5px;
       transition: background 0.3s ease-in-out;
+      padding: 10px;
+      letter-spacing: 1px;
       &:hover{
         background: $burgundyHover;
         text-decoration: none;
