--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,7 +5,7 @@
 *,
 body,
 html {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'verdana', sans-serif;
   box-sizing: border-box;
   // background: purple;
 }
