--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -172,18 +172,28 @@ select {
         -moz-border-radius-topright: 5px;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
-        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#8930f4+0,ca76db+100 */
-        background: rgba(137,48,244,.8); /* Old browsers */
-        background: -moz-linear-gradient(-45deg, rgba(137,48,244,.8) 0%, rgba(202,118,219,.8) 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(-45deg, rgba(137,48,244,.8) 0%,rgba(202,118,219,.8) 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(135deg, rgba(137,48,244,.8) 0%,rgba(202,118,219,.8) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#db2b2b+0,d14545+100 */
+        background: rgba(219,43,43,.8); /* Old browsers */
+        background: -moz-linear-gradient(left, rgba(219,43,43,.8) 0%, rgba(209,69,69,.8) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(left, rgba(219,43,43,.8) 0%,rgba(209,69,69,.8) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to right, rgba(219,43,43,.8) 0%,rgba(209,69,69,.8) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
         .user-img{
-          width: 35px;
-          height: 35px;
+          width: 50px;
+          height: 50px;
           border-radius: 50%;
           border: 2px solid white;
           display: inline-block;
-          background: url("http://decorationchannel.com/wp-content/uploads/2011/12/modern-house-with-glass-wall.jpg") no-repeat center center;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;
+        }
+        .user-img-long{
+          width: 80px;
+          height: 80px;
+          border-radius: 50%;
+          border: 2px solid white;
+          display: inline-block;
           -webkit-background-size: cover;
           -moz-background-size: cover;
           -o-background-size: cover;
@@ -255,7 +265,7 @@ select {
   transition: background 0.3s ease-in-out;
   //Changes to pink and to a pointer when hovering
   &:hover{
-    background: $burgundyHover;
+    background: $burgundy;
     cursor: pointer;
   }
 }
